--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             Скорость: <span id="finalSpeed">1</span> уровень
         </div>
 
-        <button class="main-button" onclick="window.open('https://web.telegram.org/k/#@kiber1gamebot', '_blank')">
+        <button class="main-button" onclick="window.open('https://t.me/kiber1gamebot', '_blank')">
             🚀 СОЗДАТЬ СВОЮ ИГРУ
         </button>
         
